--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+<div> Primele 4 boxuri mari</div>
+<div> 3 boxuri mai mici</div>
+<div> ultimele 3 boxuri</div>
     
 </body>
 </html>
