init the workspace

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
   <body>
     <div></div>
 
-    <div>3 boxuri mai mici</div>
+    <div>
+
+        
+
+    </div>
+
+
+
+
     <div>ultimele 3 boxuri</div>
   </body>
 </html>
