background and three boxes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
     <div></div>
 
     <div>
+        <div class="surface">
+          
+          <div class="squareOne">content</div>
+          <div class="squareTwo">content2</div>
+          <div class="squareThree">content3</div>
+        </div>
 
-        
+
 
     </div>
 
