--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <div>
         <div class="surface">
           
-          <div class="squareOne">content</div>
+          <div class="squareOne">
+            <i class="bi bi-slack"></i>
+            <div class="textPosition">
+              <p style="font-weight: bold; font-family: Arial, Helvetica, sans-serif;">Slack</p>
+            </div>
+            
+          </div>
           <div class="squareTwo">content2</div>
           <div class="squareThree">content3</div>
         </div>
