changed textPosition with titlePosition

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
           
           <div class="squareOne">
             <i class="bi bi-slack"></i>
-            <div class="textPosition">
+            <div class="titlePosition">
               <p style="font-weight: bold; font-family: Arial, Helvetica, sans-serif;">Slack</p>
+            </div>
+
+            <div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             
           </div>
