--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
               <p style="font-weight: bold; font-family: Arial, Helvetica, sans-serif;">Slack</p>
             </div>
 
-            <div>
+             <div class="textPosition">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            
           </div>
-          <div class="squareTwo">content2</div>
+
+          <div class="squareTwo">
+              <div class="circleBlue">
+              
+              </div>
+
+          </div>
           <div class="squareThree">content3</div>
         </div>
 
