Trello almost done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p style="font-weight: bold; font-family: Arial, Helvetica, sans-serif;">Slack</p>
             </div>
 
-             <div class="textPosition">
+             <div class="textPositionSlack">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
           </div>
@@ -31,10 +31,13 @@
           <div class="squareTwo">
               <div class="circleBlue">
                 <i class="bi bi-trello"></i>
-                <div class="titlePosition">
+                <div class="titlePositionTrello">
                   <p style="font-weight: bold; font-family: Arial, Helvetica, sans-serif;">Trello</p>
                 </div>
-                
+
+                <div class="textPositionTrello">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
               </div>
 
           </div>
