--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Project Grup</title>
-
+  <title>Project Grup</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
-    <div class="box container">
+    
+     <div class="box container">
       <div class="card container">
         <div class="margin"><i class="bi bi-briefcase red"></i></div>
         <h4 class="size"><b>100+</b></h4>
@@ -67,9 +67,35 @@
     </div>
 
     <div></div>
-
-
+    
     <div>3 boxuri mai mici</div>
-    <div>ultimele 3 boxuri</div>
+   
+   <div class="thirdBox">
+      <div class="thirdCard">
+        <h1 class="bi bi-stop-circle thirdBlue"></h1>
+        <div>
+          <h2><b>34</b><br />Tasks completed</h2>
+        </div>
+        <h3 class="bi bi-three-dots dots"></h3>
+      </div>
+
+      <div class="thirdCard">
+        <h1 class="bi bi-cash-stack thirdGreen"></h1>
+        <div>
+          <h2><b>$27,500</b><br />Spendings</h2>
+        </div>
+        <h3 class="bi bi-three-dots dots"></h3>
+      </div>
+
+      <div class="thirdCard">
+        <h1 class="bi bi-alarm thirdOrange"></h1>
+        <div>
+          <h2><b>250</b><br />Hours spent</h2>
+        </div>
+        <h3 class="bi bi-three-dots dots"></h3>
+      </div>
+    </div>
+
+  
   </body>
 </html>
